--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,6 @@
 {
     "configurations": [
+    
         {
             "type": "java",
             "name": "Spring Boot-BackendApplication<backend>",
@@ -8,7 +9,7 @@
             "mainClass": "com.ecommerce.backend.BackendApplication",
             "projectName": "backend",
             "args": "",
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/backend/src/main/resources/.env"
         }
     ]
 }
