--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-.properties
+.env
 
 ### STS ###
 .apt_generated
@@ -13,7 +13,7 @@ target/
 .settings
 .springBeans
 .sts4-cache
-
+.properties
 
 ### IntelliJ IDEA ###
 .idea
