--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/matheusdb
-spring.datasource.username=ts553201wtmgjsl42d3z
-spring.datasource.password=pscale_pw_iQFneF6hV3aUispnU0sqFbtaYLDfgEadk2DhwDavrXF
+spring.datasource.url=${HOST}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+
+
 spring.jpa.hibernate.ddl-auto=update
