--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
-spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/matheusdb
-spring.datasource.username=ts553201wtmgjsl42d3z
-spring.datasource.password=pscale_pw_iQFneF6hV3aUispnU0sqFbtaYLDfgEadk2DhwDavrXF
+spring.config.import=.env[.properties]
+spring.datasource.url=${HOST:world}
+spring.datasource.username=${USERNAME:world}
+spring.datasource.password=${PASSWORD:world}
 spring.jpa.hibernate.ddl-auto=update
