--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.url=${HOST:world}
 spring.datasource.username=${USERNAME:world}
 spring.datasource.password=${PASSWORD:world}
 spring.jpa.hibernate.ddl-auto=update
+
+spring.cloud.gcp.project-id=${ID:world}
+spring.cloud.gcp.credentials.location=${LOCATION:world}
+
+gcp.bucket.name=${NAMEBUCKET:world}
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
