--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,8 +7,17 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.cloud.gcp.project-id=${ID:world}
 spring.cloud.gcp.credentials.location=${LOCATION:world}
+spring.cloud.gcp.config.credentials.default-scopes=${LOCATIONGMAIL:world}
 
 gcp.bucket.name=${NAMEBUCKET:world}
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=matheusmeneses07@gmail.com
+spring.mail.password=xkjztbpwxguorvzd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
