--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,6 +19,33 @@
       <spring-cloud.version>2022.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
+			<!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-gmail -->
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-gmail</artifactId>
+			<version>v1-rev110-1.25.0</version>
+		</dependency>
+		<dependency>    
+			<groupId>com.sun.mail</groupId>    
+			<artifactId>jakarta.mail</artifactId>    
+			<version>2.0.1</version> 
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.mail</groupId>
+			<artifactId>jakarta.mail-api</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+    		<artifactId>spring-context-support</artifactId>
+    		<version>6.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.5.6</version>
+		</dependency>
       <dependency>
          <groupId>com.google.cloud</groupId>
          <artifactId>spring-cloud-gcp-starter-storage</artifactId>
