--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -30,7 +30,11 @@
 			<artifactId>jakarta.mail</artifactId>    
 			<version>2.0.1</version> 
 		</dependency>
-
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.12.5</version>
+		</dependency>
 		<dependency>
 			<groupId>jakarta.mail</groupId>
 			<artifactId>jakarta.mail-api</artifactId>
