--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,6 +19,12 @@
       <spring-cloud.version>2022.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
+					<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-freemarker -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-freemarker</artifactId>
+				<version>3.2.1</version>
+			</dependency>
 			<!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-gmail -->
 		<dependency>
 			<groupId>com.google.apis</groupId>
@@ -48,7 +54,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
-			<version>2.5.6</version>
+			<version>2.7.18</version>
 		</dependency>
       <dependency>
          <groupId>com.google.cloud</groupId>
