--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.mail.password=${PASSWORDEMAIL:world}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.security.token=${TOKEN:world}
+
